--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ nav ul li a {
 
 /* ✅ Full Background Hero Section */
 .hero {
-  background: url("../images/front image.jpg") no-repeat center center/cover;
+  background: url("../images/front - image.jpg") no-repeat center center/cover;
   height: 100vh;
   color: white;
   display: flex;
